k8s/service-nodeports.yml
apiVersion: v1
kind: Service
metadata:
  name: server-nodeports
spec:
  type: NodePort
  selector:
    component: server
  ports:
    - name: http
      port: 80
      targetPort: 8888
      nodePort: 30602
    - name: https   
      port: 443
      targetPort: 8888
      nodePort: 30824
